--- a/src/com/books/business/UserFrame.form
+++ b/src/com/books/business/UserFrame.form
@@ -101,7 +101,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="Employee"/>
+            <Property name="text" type="java.lang.String" value="Users"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
@@ -155,11 +155,11 @@
               <Font name="Century Gothic" size="15" style="0"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="Search Employee"/>
+            <Property name="text" type="java.lang.String" value="Search User"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="990" y="40" width="-1" height="26"/>
+              <AbsoluteConstraints x="1020" y="40" width="-1" height="26"/>
             </Constraint>
           </Constraints>
         </Component>
